<resources>
    <string name="app_name">ADB Over the Air</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="instruction_off">Connect to WiFi then tap on Start button</string>
    <string name="instruction_on">Run this command on computer: \n adb connect %s:%d</string>
    <string name="stop_adb">Stop ADB</string>
    <string name="start_adb">Start ADB</string>
    <string name="listening">Listening</string>
    <string name="active">Active</string>
    <string name="address">Address</string>
    <string name="port">Port</string>
    <string name="dots">…</string>
    <string name="wifi_not_connected">WiFi is not connected</string>
    <string name="adb_is_running">ADB is running</string>
    <string name="close">Close</string>
    <string name="at_address">at %s:%d</string>
    <string name="next_time">Will be applied next time</string>
    <string name="restart">Restart</string>
</resources>
