<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.zwlxt.adbwireless.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="32dp"
            android:scaleType="fitCenter"
            android:src="@drawable/header_image" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp">

            <TextView
                android:id="@+id/textview_instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="16dp"
                android:text="[Instruction]"
                android:textAlignment="center"
                android:textSize="12sp" />

            <ImageButton
                android:id="@+id/button_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_refresh_black_24dp" />

        </RelativeLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:focusableInTouchMode="true">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:stretchColumns="2">

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/listening" />

                    <EditText
                        android:width="0dp"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/textview_listneing_status"
                        android:layout_width="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:text="[status]"
                        android:textColor="#000000" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/active" />

                    <EditText
                        android:width="0dp"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/textview_active_status"
                        android:layout_width="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:text="[status]"
                        android:textColor="#000000" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/address" />

                    <EditText
                        android:width="0dp"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/textview_address"
                        android:layout_width="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:text="[address]"
                        android:textColor="#000000" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/port" />

                    <EditText
                        android:id="@+id/edit_port"
                        android:layout_width="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:layout_span="2"
                        android:cursorVisible="false"
                        android:inputType="number"
                        android:maxLength="5"
                        android:maxLines="1"
                        android:minEms="4"
                        android:text="5555"
                        android:textAlignment="center" />
                </TableRow>

                <TableRow>

                    <Button
                        android:id="@+id/button_start_stop"
                        android:layout_width="match_parent"
                        android:layout_marginTop="16dp"
                        android:layout_span="3"
                        android:text="[Enable/Disable]"
                        android:foreground="?attr/selectableItemBackground"
                        style="@style/Widget.AppCompat.Button.Colored" />
                </TableRow>
            </TableLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>